Refactor: test코드 추가, 메소드 세분화 (#252)
* test: KeywordMetricHourlyServiceTest 테스트 코드 추가

* feature: evaluateNovelty 로직 메서드 분리

* refactor: 메소드 세분화, Test 코드 추가